if(WIN32)
    set(BULLET_SRC_DIR ${INCLUDES_BASE_DIR}/bullet/src)

    add_library(bullet.hdll SHARED
        ${BULLET_SRC_DIR}/Bullet3Common/b3AlignedAllocator.cpp
        ${BULLET_SRC_DIR}/Bullet3Common/b3Logging.cpp
        ${BULLET_SRC_DIR}/Bullet3Common/b3Vector3.cpp
        ${BULLET_SRC_DIR}/Bullet3Geometry/b3ConvexHullComputer.cpp
        ${BULLET_SRC_DIR}/Bullet3Geometry/b3GeometryUtil.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btDbvt.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btDispatcher.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
        ${BULLET_SRC_DIR}/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcherMt.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCollisionObject.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btGhostObject.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btManifoldResult.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/btUnionFind.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btBox2dShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btBoxShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btCapsuleShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btCollisionShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btCompoundShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConcaveShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConeShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvex2dShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexHullShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btCylinderShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btEmptyShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btShapeHull.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btSphereShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleCallback.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleMesh.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btContactProcessing.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btGenericPoolAllocator.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btGImpactBvh.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btGImpactShape.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/btTriangleShapeEx.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/gim_box_set.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/gim_contact.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/gim_memory.cpp
        ${BULLET_SRC_DIR}/BulletCollision/Gimpact/gim_tri_collision.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
        ${BULLET_SRC_DIR}/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Character/btKinematicCharacterController.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Dynamics/btRigidBody.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Dynamics/btSimulationIslandManagerMt.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBody.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyGearConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Vehicle/btRaycastVehicle.cpp
        ${BULLET_SRC_DIR}/BulletDynamics/Vehicle/btWheelInfo.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btDefaultSoftBodySolver.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftBody.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftBodyHelpers.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftMultiBodyDynamicsWorld.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftRigidDynamicsWorld.cpp
        ${BULLET_SRC_DIR}/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
        ${BULLET_SRC_DIR}/LinearMath/btAlignedAllocator.cpp
        ${BULLET_SRC_DIR}/LinearMath/btConvexHull.cpp
        ${BULLET_SRC_DIR}/LinearMath/btConvexHullComputer.cpp
        ${BULLET_SRC_DIR}/LinearMath/btGeometryUtil.cpp
        ${BULLET_SRC_DIR}/LinearMath/btPolarDecomposition.cpp
        ${BULLET_SRC_DIR}/LinearMath/btQuickprof.cpp
        ${BULLET_SRC_DIR}/LinearMath/btSerializer.cpp
        ${BULLET_SRC_DIR}/LinearMath/btSerializer64.cpp
        ${BULLET_SRC_DIR}/LinearMath/btThreads.cpp
        ${BULLET_SRC_DIR}/LinearMath/btVector3.cpp
        bullet.cpp
    )

    set_as_hdll(bullet)

    target_include_directories(bullet.hdll
        PRIVATE
        ${BULLET_SRC_DIR}
    )

    target_link_libraries(bullet.hdll
        libhl
    )

    install(
        TARGETS
            bullet.hdll
        DESTINATION ${HDLL_DESTINATION}
    )
endif()
